# xshellz-rust

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md
examples/: basic.rs
src/: config.rs  error.rs  http.rs  jobs.rs  keys.rs  keystore.rs  lib.rs  models.rs  sandbox.rs  transport.rs
tests/: control_plane.rs
